# POB

./: .gitignore  LICENSE  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  SETUP_REPORT.md  pob_shell_functions.sh  pyproject.toml  requirements.txt  setup.py  test_comprehensive.py  test_data_persistence.py  test_integration.py  verify_setup.sh
.github/workflows/: ci.yml
parliament_of_bruce/: __init__.py  cli.py  config.py  db.py  migration.py  models.py  services.py  storage.py
parliament_of_bruce/services/: __init__.py  analytics_service.py  custom_bruce_service.py  law_service.py  session_service.py  vote_service.py
parliament_of_bruce/templates/: default_constitution.json
parliament_of_bruce/tests/: test_custom_bruce.py  test_session.py  test_vote.py
parliament_of_bruce/ui/: __init__.py  prompts.py
